--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -2,7 +2,7 @@
 	<div class="login-page ng-scope ui-view"> 
     <div class="row"> 
       <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4"> 
-        <img src="logo.png" class="user-avatar" /> 
+        <img src="/logo.png" class="user-avatar" /> 
         <h1> <small>Face Recognition</small></h1> 
         <form role="form" class="ng-pristine ng-valid"> 
           <div class="form-content"> 
