--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -35,6 +35,12 @@
                           <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
                         </div>
                       </div>
+                      <div class="form-group">
+                        <label class="control-label col-sm-2" for="license">License No:</label>
+                        <div class="col-sm-10">
+                          <input type="license" class="form-control" id="license" placeholder="Enter License No" name="license">
+                        </div>
+                      </div>
                     </form>
                     {{> s3_tester}}
                 {{/if}}
